# depreduce

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Dockerfile.zirgen  README.md  REQUIREMENTS.md  STATUS.md  blockrules.txt  depreduce.toml  test.sh
depreduce/: Cargo.toml
depreduce/src/: lib.rs  main.rs
depreduce/src/configs/: filter_factory.rs  mod.rs
depreduce/src/dep_editors/: bazel_dep_editor.rs  mod.rs
depreduce/src/dep_graph/: bazel_xml_parser.rs  mod.rs
depreduce/src/editors/: bazel_dep_editor.rs  cargo_dep_editor.rs  mod.rs
depreduce/src/filters/: alias_like_filter.rs  attr_rule_based_filter.rs  executable_rules.rs  function_call_filter.rs  mod.rs  rule_based_filter.rs
depreduce/src/graph/: bazel_xml_parser.rs  buck_json_parser.rs  graph.rs  mod.rs
depreduce/src/postprocessors/: alias_target_postprocessor.rs  mod.rs
depreduce/src/reducers/: mod.rs  reduce_context.rs  top_sort_reducer.rs
depreduce/src/reducers/candidate_generators/: mod.rs  naive_reduction_candidate_generator.rs
depreduce/src/stats/: mod.rs  rebuild_cost.rs
depreduce/src/supports/: bazel_support.rs  buck_support.rs  cargo_support.rs  mod.rs
depreduce/src/test_data/: always-consider-added-edges-deps.xml  build-buck.sh  cxx-deps-optimized.xml  cxx-deps.xml  java-deps.xml  keep-direct-deps-deps.xml  keep-direct-deps-exports-deps.xml  kt-deps.xml  kt-transitive-deps.xml  multi-lang-deps.xml  multi-platform-deps.xml  perses.xml  test-alias-recovery-deps.xml  test-lifting-deps-deps.xml  test.BUILD
depreduce/src/test_data/filters/: select.xml  transitive_results.txt
depreduce/src/test_data/postprocessors/: test-alias-recovery.graph.json  test-alias-recovery.ops.jsonl
depreduce/src/test_data/reducers/: always-consider-added-edges.graph.json  always-consider-added-edges.ops.jsonl  cxx.out  (+18 more)
examples/multi-lang-project/: MODULE.bazel  build.sh
(+4247 files in other folders)
