[package]
name = "depreduce"
version = "0.1.0"
edition = "2024"

[dependencies]
quick-xml = { version = "0.37.5", features = ["overlapped-lists", "serialize"] }
rstest = "0.25.0"
rustpython-parser = { version = "0.4.0", features = ["all-nodes-with-ranges"] }
serde = { version = "1.0.219", features = ["derive"] }
utils = { path = "../utils" }
