[package]
name = "depreduce"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
quick-xml = { version = "0.37.5", features = ["overlapped-lists", "serialize"] }
rstest = "0.25.0"
rustpython-parser = { version = "0.4.0", features = ["all-nodes-with-ranges"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
utils = { path = "../utils" }
