[package]
name = "depreduce"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
normalize-path = "0.2.1"
clap = { version = "4.5.40", features = ["derive"] }
quick-xml = { version = "0.37.5", features = ["overlapped-lists", "serialize"] }
regex = "1.11.1"
rstest = "0.25.0"
rustpython-parser = { version = "0.4.0", features = ["all-nodes-with-ranges"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.8.23"
utils = { path = "../utils" }
cargo_metadata = "0.23.0"
toml_edit = "0.23.7"
