"""Module dependencies for the simple C++ project."""
bazel_dep(name = "rules_cc", version = "0.0.17")
bazel_dep(name = "rules_java", version = "8.11.0")
bazel_dep(name = "rules_kotlin", version = "1.9.6")
bazel_dep(name = "rules_python", version = "0.40.0")

bazel_dep(name = "platforms", version = "1.0.0")

bazel_dep(name = "pybind11_bazel", version = "2.13.6")
